--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -8,7 +8,7 @@ company.name=Your Company Here
 company.url=http://raibledesigns.com
 copyright.year=${copyright.year}
 
-user.status=Logged in as: 
+user.status=Logged in as:
 user.logout=Logout
 
 # -- validator errors --
@@ -43,7 +43,7 @@ errors.existing.user=This username ({0}) or e-mail address ({1}) already exists.
 # -- success messages --
 user.added=User information for {0} has been added successfully.
 user.deleted=User Profile for {0} has been deleted successfully.
-user.registered=You have successfully registered for access to this application. 
+user.registered=You have successfully registered for access to this application.
 user.saved=Your profile has been updated successfully.
 user.updated.byAdmin=User information for {0} has been successfully updated.
 newuser.email.message={0} has created an AppFuse account for you.  Your username and password information is below.
@@ -150,7 +150,7 @@ user.enabled=Enabled
 user.accountExpired=Expired
 user.accountLocked=Locked
 user.credentialsExpired=Password Expired
-
+user.signupDate=Sign-up Date
 # -- user list page --
 userList.title=User List
 userList.heading=Current Users
@@ -173,7 +173,7 @@ upload.message=Note that the maximum allowed size of an uploaded file for this a
 uploadForm.name=Friendly Name
 uploadForm.file=File to Upload
 
-# -- display page messages -- 
+# -- display page messages --
 display.title=File Uploaded Successfully!
 display.heading=File Information
 
